# me-ica

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  install.sh  meica.py  meica_gui.py  mypy.ini  obliquity.py  pyproject.toml  requirements.txt  setup.py  tedana.py  tox.ini
.circleci/: config.yml
docs/: conf.py  index.rst  installation.rst  introduction.rst  usage.rst
gooey/gui/: application.py  controller.py  events.py  image_repository.py  imageutil.py  model.py  presenter.py  processor.py  pubsub.py  subpresenter.py
gooey/languages/: eng.py  english.json
gooey/python_bindings/: argparse_to_json.py  config_generator.py  docopt_to_json.py  gooey_decorator.py  gooey_parser.py
gooey/tests/: conftest.py  test_argparse_to_json.py  test_image_repositoy.py  test_presentation.py  test_processor.py
libmeica/: __init__.py  alignp_mepi_anat.py  command_line.py  dr2s.py  fastica.py  fit_encoding.py  fitmodels.py  gscontrol.py  mepca.py  preprocess.py  runtime.py  selcomps_base.py  selcomps_encoding.py  t2smap.py
libmeica/utils/: artifact.py  encoding_table.py  filter.py  lstsq.py  memory.py  selection.py  t2s.py  volume.py
me-ica/: meica.py
meica/: __init__.py  __main__.py  alignp_mepi_anat.py  info.py  meica.py  select_model.py  select_model_fft20e.py  t2smap.py  tedana.py  utils.py  version.py
meica.libs/: alignp_mepi_anat.py  lib_tedana.py  select_model.py  select_model_fft20d.py  select_model_fft20e.py  t2smap.py  tedana.py
meica/cli/: run_meica.py  (+3 more)
scripts/: run_alignp_mepi_anat.py  run_meica.py  run_t2smap.py  run_tedana.py
(+256 files in other folders)
