[tool.poetry]
name = "me-ica"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "PRIVATE"
readme = "README.md"
packages = [{include = "me_ica"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ipdb = "0.13.9"
ipython = "7.32.0"
jupyterlab = "3.3.4"
matplotlib = "3.5.1"
nibabel = "3.2.2"
numpy = "1.20.3"
packaging = "21.3"
PyWavelets = "1.3.0"
scipy = "1.7.3"
scikit-learn = "1.0.2"
pytest = "^7.1.3"
mypy = "^0.982"
boto3 = "^1.28.10"
imageio = "^2.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
