[tool.poetry]
name = "me-ica"
version = "3.9.6"
description = ""
authors = ["Prantik Kundu <prantikk@gmail.com>"]
license = "LGPL-v2.1"
readme = "README.md"
packages = [{include = "me_ica"}]

[tool.poetry.dependencies]
python = ">=3.9"
nibabel = "3.2.2"
numpy = "1.20.3"
packaging = "21.3"
scipy = "1.7.3"
scikit-learn = "1.0.2"
imageio = "^2.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
